--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ rusqlite = {version = "0.25.1", features=["chrono"]}
 directories = "3.0.2"
 anyhow = "1.0.40"
 prettytable-rs = "0.8"
+textwrap = "0.13.4"
