Prepares cargo publish

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "akiv"
 version = "0.1.0"
 authors = ["sergio garcia <sergio.garcia@gmail.com>"]
 edition = "2018"
+description = "The hyper minimalistic daily planner."
+license = "GPL 3.0"
 
 [dependencies]
 structopt = "0.3"
